--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,7 @@
+= 1.33.3 =
+* Fix: Upgrade jquery-fileupload to v9.32.0
+* Fix: Set frame origin on pages where shortcodes are embedded
+
 = 1.33.2 =
 * Fix: Issue with `[jobs]` filter form on some themes and plugins.
 
