--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+= 1.34.4 =
+* Fix: Security issue with job listing duplication.
+
 = 1.34.3 =
 * Fix: Hide filled listings in WordPress 5.5 sitemaps.
 * Fix: Issue with editing a job after getting to a preview step for another job.
