--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,13 @@
+= 1.36.0 =
+* Enhancement: Add salary field to satisfy Google's job search schema
+* Enhancement: Allow location to display as either City/St or Full Address
+* Fix: Form validation - consider zero (0) as a value for required fields
+* Fix: Jobs CPT doesn't show password field when job is password protected
+* Enhancement: Add link to Jobs Dashboard after submitting job
+* Enhancement: Ability to add multiple locations in search
+* Enhancement: Add support for remote job listings
+* Enhancement: Add jobLocationType: TELECOMMUTE , per Google
+
 = 1.35.3 =
 * Fix: Use wp_kses_post to process a job title instead of esc_html
 * Fix: Fix dependencies (npm/composer) problems
