--- a/changelog.txt
+++ b/changelog.txt
@@ -6,7 +6,13 @@
 * Enhancement: Add link to Jobs Dashboard after submitting job
 * Enhancement: Ability to add multiple locations in search
 * Enhancement: Add support for remote job listings
-* Enhancement: Add jobLocationType: TELECOMMUTE , per Google
+* Enhancement: Add jobLocationType: TELECOMMUTE, per Google
+* Enhancement: Job Visibility Settings
+* Fix: Undefined type PHP Notice
+* Fix: Fix broken lost license key link
+* Fix: Return $redirect_url when nothing to do with bulk edit
+* Enhancement: Allow user to select the pagination type for the [jobs] page
+* Enhancement: Added setting to bypass trash for job listings
 
 = 1.35.3 =
 * Fix: Use wp_kses_post to process a job title instead of esc_html
