--- a/languages/wp-job-manager.pot
+++ b/languages/wp-job-manager.pot
@@ -9,7 +9,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"POT-Creation-Date: 2022-06-21T18:57:53+00:00\n"
+"POT-Creation-Date: 2022-06-21T19:38:52+00:00\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "X-Generator: WP-CLI 2.4.0\n"
 "X-Domain: wp-job-manager\n"
@@ -234,6 +234,7 @@ msgstr ""
 msgid "%1$s updated. <a href=\"%2$s\">View</a>"
 msgstr ""
 
+#. translators: %1$s is the singular name of the job listing post type; %2$s is the URL to view the listing.
 #: includes/admin/class-wp-job-manager-cpt.php:460
 #: tmp/release-svn/wp-job-manager/trunk/includes/admin/class-wp-job-manager-cpt.php:456
 msgid "Custom field updated."
@@ -385,6 +386,7 @@ msgstr ""
 msgid "View"
 msgstr ""
 
+#. translators: Placeholder %s is the singular label of the job listing post type.
 #: includes/admin/class-wp-job-manager-cpt.php:652
 #: includes/class-wp-job-manager-post-types.php:340
 #: includes/class-wp-job-manager-shortcodes.php:441
@@ -1033,8 +1035,7 @@ msgid "Remote Position"
 msgstr ""
 
 #: includes/admin/class-wp-job-manager-writepanels.php:70
-#: includes/forms/class-wp-job-manager-form-submit-job.php:231
-msgid "Check if is a remote position."
+msgid "Select if this is a remote position."
 msgstr ""
 
 #: includes/admin/class-wp-job-manager-writepanels.php:75
@@ -1450,6 +1451,7 @@ msgstr[1] ""
 msgid "You must be logged in to upload files using this method."
 msgstr ""
 
+#. translators: Placeholder %s is the singular label of the job listing post type.
 #: includes/class-wp-job-manager-data-exporter.php:51
 #: includes/class-wp-job-manager-post-types.php:357
 #: tmp/release-svn/wp-job-manager/trunk/includes/class-wp-job-manager-data-exporter.php:51
@@ -1687,6 +1689,7 @@ msgstr ""
 msgid "Jobs"
 msgstr ""
 
+#. translators: Placeholder %s is the plural label of the job listing post type.
 #: includes/class-wp-job-manager-post-types.php:337
 #: tmp/release-svn/wp-job-manager/trunk/includes/class-wp-job-manager-post-types.php:331
 msgid "Add New"
@@ -1873,6 +1876,7 @@ msgstr ""
 msgid "Missing submission page."
 msgstr ""
 
+#. translators: Placeholder %s is the plural label for the job listing post type.
 #: includes/class-wp-job-manager-shortcodes.php:392
 #: includes/widgets/class-wp-job-manager-widget-featured-jobs.php:36
 #: includes/widgets/class-wp-job-manager-widget-featured-jobs.php:52
@@ -2113,6 +2117,10 @@ msgstr ""
 #: includes/forms/class-wp-job-manager-form-submit-job.php:223
 #: tmp/release-svn/wp-job-manager/trunk/includes/forms/class-wp-job-manager-form-submit-job.php:214
 msgid "Leave this blank if the location is not important"
+msgstr ""
+
+#: includes/forms/class-wp-job-manager-form-submit-job.php:231
+msgid "Check if is a remote position."
 msgstr ""
 
 #: includes/forms/class-wp-job-manager-form-submit-job.php:240
@@ -2779,6 +2787,7 @@ msgstr ""
 msgid "%s submitted successfully. Your listing will be visible once approved."
 msgstr ""
 
+#. translators: %1$s is the URL to view the listing; %2$s is
 #: templates/job-submitted.php:49
 msgid "  <a href=\"%1$s\"> View your %2$s</a>"
 msgstr ""
