--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,7 @@
+= 1.37.0 =
+* Enhancement: Job Visibility Settings
+* Enhancement: New settings for Salary fields
+
 = 1.36.2 =
 * Fix: Revert Job Visibility Settings feature
 
